--- a/app/src/main/res/layout/activity_edit_job.xml
+++ b/app/src/main/res/layout/activity_edit_job.xml
@@ -17,6 +17,7 @@
         android:id="@+id/editTextJobRole"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_underline"
         android:layout_below="@id/textViewJobRole"/>
 
     <TextView
@@ -32,6 +33,7 @@
         android:id="@+id/editTextCompany"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_underline"
         android:layout_below="@id/textViewCompany"/>
 
     <TextView
@@ -47,6 +49,7 @@
         android:id="@+id/editTextLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_underline"
         android:layout_below="@id/textViewLocation"/>
 
     <TextView
@@ -62,6 +65,7 @@
         android:id="@+id/spinnerStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_underline"
         android:layout_below="@id/textViewStatus"/>
 
     <Button
