--- a/app/src/main/res/layout/insertreminder_popup.xml
+++ b/app/src/main/res/layout/insertreminder_popup.xml
@@ -5,9 +5,10 @@
     android:layout_width="300dp"
     android:layout_height="350dp"
     android:orientation="vertical"
-    android:background="#CCCCFF"
     android:layout_gravity="center"
-    android:padding="25dp">
+    android:padding="25dp"
+    android:background="@drawable/border_card_layout">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +22,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:hint="Date And Time"
+            android:background="@drawable/border_layout"
+            android:hint="DATE / TIME"
             android:layout_gravity="center"/>
         <Button
             android:id="@+id/selectDate"
@@ -38,8 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:padding="10dp"
         android:layout_gravity="center"
-        android:hint="Message"
+        android:hint="MESSAGE"
+        android:background="@drawable/border_layout"
         android:gravity="center"/>
 
     <Button
