--- a/app/src/main/res/layout/job_tracker.xml
+++ b/app/src/main/res/layout/job_tracker.xml
@@ -8,24 +8,43 @@
     tools:context=".aakanksha_jobtracker.screens.JobTracker">
 
     <!-- Title "Job Tracker" -->
-    <TextView
-        android:id="@+id/textJobTrackerTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Job Tracker"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp" />
-    <Button
-        android:id="@+id/buttonAddJob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Job"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/border_card_layout"/>
+    <!--    <Button-->
+<!--        android:id="@+id/buttonAddJob"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Add Job"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:background="@drawable/border_card_layout"/>-->
+<!--    -->
+
     <!-- Saved List -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:id="@+id/textJobTrackerTitle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Your Jobs"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/buttonAddJob"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/add"
+            android:tint="@android:color/black"
+            />
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardSaved"
         android:layout_width="match_parent"
@@ -287,6 +306,8 @@
                 android:paddingTop="8dp" />
 
         </RelativeLayout>
+
     </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
