--- a/app/src/main/res/layout/daily_task_tracker.xml
+++ b/app/src/main/res/layout/daily_task_tracker.xml
@@ -60,7 +60,25 @@
         app:cardBackgroundColor="#394E78"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/homeButton"
+                android:layout_width="60dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="6dp"
+                android:backgroundTint="#7496DA"
+                android:text="Home"
+                android:textSize="8sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/headingTextView"
@@ -83,12 +101,10 @@
         android:backgroundTint="#FDCA8A"
         android:text="Add New Task"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headingTextView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/headingTextView" />
 
     <ScrollView
         android:id="@+id/scrollView"
